Dark Theme for the IDE (#95)
* Implemented Dark Theme

- Added CSS files for dark theme
- Refactored icon drawing functions into icons.ts, the icon functions take an additional parameter `dark` now, that determines if the dark theme is activated. Some icons are drawn with different colors to be more visible on the dark background.

* Adjusted colors and icons

- Adjusted colors of some components
- Made some icons more visible on the dark background
- Moved checkbox to the left of the label

* Changed comment.txt to comment.md

* Run prettier

* A theme is now selected by a drop down menu

* Run prettier

* Refactoring, Fixes
- renamed 'event' field to 'events' in description objects, it seems
  that this was not used anywere
- changed toolbar creation
- changed/updated the documentation of tgui.createElement
- removed 'attributes' again, using 'properties' instead
- some css tweaking

* Simplified CSS

* Removed strings identifying icons, using icons.name instead
- Fixed scrollbar issue (index.html)
- Added static icons, which do not get updated

* Run prettier

* Fixed & moved export styling

* Run prettier

* Removed commented out old code

--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -181,3 +181,54 @@ button {
 .ide-userclass {
 	color: #000;
 }
+
+.tgui-label.ide-state-unchecked {
+	background-color: #ee8;
+}
+
+.tgui-label.ide-state-error {
+	background-color: #f44;
+}
+
+.tgui-label.ide-state-running {
+	background-color: #8e8;
+}
+
+.tgui-label.ide-state-waiting {
+	background-color: #aca;
+}
+
+.tgui-label.ide-state-stepping {
+	background-color: #8ee;
+}
+
+.tgui-label.ide-state-finished {
+	background-color: #88e;
+}
+
+.ide-export-status {
+	position: absolute;
+	width: 80%;
+	left: 10%;
+	height: 40px;
+	line-height: 35px;
+	color: #000;
+	padding: 2px 10px;
+	vertical-align: middle;
+	border: 1px solid #000;
+}
+
+.ide-export-download {
+	position: absolute;
+	width: 80%;
+	left: 10%;
+	height: 40px;
+	line-height: 35px;
+	background: #fff;
+	color: #44c !important;
+	font-decoration: underline;
+	padding: 2px 10px;
+	vertical-align: middle;
+	border: 1px solid #000;
+	display: none;
+}
