SVG Icons & Dark Theme Detection (#96)
* Implemented SVG Icons

- removed icon updating code
- added svg.ts with SVGDrawingContext, it is similar but different to a canvas drawing context
- converted all icons to now work with the new SVGDrawingContext

* Removed canvas from various names

- Removed canvas from various function- and css-class-names, to be more general

* Visibility in SVGDrawingContext

* Fixed function call

* Icon generation before build time
- Moved icon code into gen-icons.ts
  - It generates icons.ts
  - gets called by `npm run gen-icons`

* Refactoring, Theme detection
- refactored gen-icons.ts
- renamed icondraw to icon
- renamed draw to icon
- missing from previous pull request (darkmode)
  - auto detection of the theme
  - fixed light scrollbars with dark theme (Chrome)

* Comment in `gen-icons.ts`

* Rename themes: default → light; auto → default

--- a/src/ide/css-dark/tgui.css
+++ b/src/ide/css-dark/tgui.css
@@ -1,3 +1,8 @@
+.dark-theme {
+	/* dark theme for scrollbars, etc */
+	color-scheme: dark;
+}
+
 .dark-theme .tgui-control {
 	color: #fff;
 }
@@ -42,21 +47,21 @@
 	box-shadow: inset 0px 0px 2px #000;
 }
 
-.dark-theme .tgui-button-canvas {
+.dark-theme .tgui-button-icon {
 	background: #373737;
 	border-color: #444;
 }
 
-.dark-theme .tgui-button-canvas:hover {
+.dark-theme .tgui-button-icon:hover {
 	background: #444;
 	border-color: #666;
 }
 
-.dark-theme .tgui-button-canvas:focus {
+.dark-theme .tgui-button-icon:focus {
 	border-color: #fff;
 }
 
-.dark-theme .tgui-button-canvas:active {
+.dark-theme .tgui-button-icon:active {
 	background: #222;
 	border-color: #000;
 	box-shadow: inset 0px 0px 2px #000;
