--- a/src/ide/css-dark/documentation.css
+++ b/src/ide/css-dark/documentation.css
@@ -134,7 +134,10 @@
 }
 
 .dark-theme .code {
-	background: #151515;
+	background: #333;
+	padding: 1px 4px;
+	border: 1px solid #444;
+	border-radius: 2px;
 }
 .dark-theme .code-keyword {
 	color: #4af;
