--- a/src/ide/css/codemirror.css
+++ b/src/ide/css/codemirror.css
@@ -1,6 +1,6 @@
 /* BASICS */
 
-.CodeMirror {
+.cm-editor {
 	/* Set height, width, borders, and global font properties here */
 	width: 100%;
 	height: 100%;
