--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -55,7 +55,7 @@ button {
 .ide-panel-area {
 	position: absolute;
 	left: 0;
-	top: 30px;
+	top: 60px;
 	width: 100%;
 	height: calc(100% - 30px);
 	min-width: 650px;
@@ -73,6 +73,25 @@ button {
 	border-bottom: #888 solid 1px;
 	box-shadow: inset 0px -1px 0px #ddd;
 	box-sizing: border-box;
+}
+
+.ide-tabs-toolbar {
+	width: 100%;
+	height: 30px;
+	background: #ccc;
+	color: #000;
+	border-bottom: #888 solid 1px;
+	box-shadow: inset 0px -1px 0px #ddd;
+	box-sizing: border-box;
+}
+
+.ide-add-document-tabs {
+    width: 20px;
+    height: 20px;
+    border: black 1px solid;
+    background: #ccc;
+    color: #000;
+    float: left;
 }
 
 .ide-sourcecode {
