--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -104,6 +104,16 @@ button {
 	overflow: scroll;
 }
 
+.ide-tab-sourcecode {
+	/* overridden in file codemirror.css, class .CodeMirror */
+	resize: none;
+	width: 100%;
+	height: calc(100% - 200px);
+	background: #fff;
+	color: #000;
+	overflow: scroll;
+}
+
 .ide-stackview {
 	background: #ffe;
 	color: #000;
