--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -75,10 +75,29 @@ button {
 	box-sizing: border-box;
 }
 
+.ide-add-document-tabs {
+	width: 20px;
+	height: 20px;
+	border: black 1px solid;
+	background: #ccc;
+	color: #000;
+	float: left;
+}
+
 .ide-sourcecode {
 	/* overridden in file codemirror.css, class .CodeMirror */
 	resize: none;
 	width: 60%;
+	height: calc(100% - 200px);
+	background: #fff;
+	color: #000;
+	overflow: scroll;
+}
+
+.ide-tab-sourcecode {
+	/* overridden in file codemirror.css, class .CodeMirror */
+	resize: none;
+	width: 100%;
 	height: calc(100% - 200px);
 	background: #fff;
 	color: #000;
