First round of clean-up after transition to CM6: - The documentation now briefly mentions the new multi-document editor. - editor panels are now always above other panels when docked. - the table of contents of the documentation (tree view on the left) is reverted to sans-serif font. - Ctrl+D (block comment/uncomment code) is back. - Block indent/unindent is back.

--- a/src/ide/css/documentation.css
+++ b/src/ide/css/documentation.css
@@ -245,6 +245,7 @@ hr {
 
 .entry {
 	padding: 4px 4px 2px 4px;
+	font-family: sans;
 }
 
 .current {
@@ -252,7 +253,7 @@ hr {
 }
 
 .tgui-tree {
-	font-family: sans-serif;
+	font-family: sans;
 	font-size: 10pt;
 	line-height: 150%;
 	color: #000;
