--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -249,39 +249,39 @@ button {
 	z-index: 10;
 }
 
-div.tabs-container {
+.tabs-container {
 	display: flex;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
 
-div.tabs-container.horizontal {
-	display: flex;
+.tabs-container.horizontal {
 	flex-direction: column;
 }
 
-div.tabs-container.vertical {
-	display: flex;
+.tabs-container.vertical {
 	flex-direction: row;
 }
 
-div.tabs {
+.tabs {
 	display: flex;
+	color: #000;
 	background: #fff;
 	user-select: none;
 	flex-grow: 0;
 }
 
-div.tabs-container.horizontal div.tabs {
+.tabs-container.horizontal div.tabs {
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-items: center;
 	width: 100%;
 	border-bottom: 1px solid #aaa;
+	border-right: 1px solid #aaa;
 }
 
-div.tabs-container.vertical div.tabs {
+.tabs-container.vertical div.tabs {
 	flex-direction: column;
 	align-items: flex-start;
 	height: 100%;
@@ -290,65 +290,67 @@ div.tabs-container.vertical div.tabs {
 	overflow-y: auto;
 }
 
-div.switch {
+.switch {
 	font-size: 150%;
 	padding: 0 5px;
 }
-div.switch:hover {
+.switch:hover {
 	color: #f00;
 }
 
-div.tabs div.file {
+.tabs div.file {
 	white-space: nowrap;
 	height: 20px;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	background: #fff;
 	margin: 0 2px;
 	padding: 2px 4px;
 	border-right: 1px solid #aaa;
 	border-bottom: 1px solid #aaa;
 	border-radius: 4px;
 }
-div.tabs-container.vertical div.tabs div.file {
-	width: 100%;
+.tabs-container.vertical div.tabs div.file {
+	margin: 0 1px;
+	width: calc(100% - 1px);
 }
-div.tabs div.file.active {
+.tabs div.file.active {
 	background: #cdd;
 }
 
-div.tabs div.file span.name {
+.tabs div.file span.name {
 	font-size: 90%;
+	flex-grow: 1000000;
 }
 
-div.tabs div.file span.close {
+.tabs div.file span.close {
 	color: #800;
+	flex-grow: 0;
 }
-div.tabs div.file span.close:hover {
+.tabs div.file span.close:hover {
 	color: #f00;
 }
 
-div.tabs-container.horizontal .name {
+.tabs-container.horizontal .name {
 	order: 1;
 }
-div.tabs-container.horizontal .close {
+.tabs-container.horizontal .close {
 	order: 2;
 	padding: 0 1px 0 5px;
 }
-div.tabs-container.vertical .name {
+.tabs-container.vertical .name {
 	order: 2;
 }
-div.tabs-container.vertical .close {
+.tabs-container.vertical .close {
 	order: 1;
 	padding: 0 5px 0 1px;
 }
 
-div.tabs-container.horizontal div.editorcontainer {
+.tabs-container.horizontal div.editorcontainer {
 	width: 100%;
 	flex-grow: 1000000;
 }
-div.tabs-container.vertical div.editorcontainer {
+.tabs-container.vertical div.editorcontainer {
 	height: 100%;
 	flex-grow: 1000000;
 }
