--- a/src/ide/css/responsive.css
+++ b/src/ide/css/responsive.css
@@ -4,6 +4,10 @@
 	align-items: center;
 }
 
+.tgui-tree {
+	overflow: auto;
+}
+
 tbody {
 	max-width: 80vw;
 }
@@ -17,9 +21,19 @@ td {
 	max-width: 60vw;
 }
 
+@media screen and (max-width: 1000px) {
+	td {
+		max-width: 55vw;
+	}
+}
+
 /* Layout change to put the sidebar above the content */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 756px) {
+	#version {
+		height: 20px;
+	}
+
 	#sidebar {
 		width: 100%;
 		max-height: 30%;
@@ -45,12 +59,13 @@ td {
 	}
 
 	#search {
+		top: 20px;
 		height: 34px;
 	}
 
 	#tree {
-		top: 80px;
-		height: calc(100% - 80px);
+		top: 54px;
+		height: calc(100% - 54px);
 	}
 
 	.dark-theme #content {
@@ -61,12 +76,17 @@ td {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		gap: 0.5rem;
-
-		padding-bottom: 3rem;
+		padding-bottom: 2rem;
+		padding-top: 1rem;
 	}
 
 	#tree > div > table > tr:nth-child(1) {
+		display: flex;
 		grid-column: span 3;
+	}
+
+	td {
+		max-width: 68vw;
 	}
 }
 
