--- a/src/ide/css/documentation.css
+++ b/src/ide/css/documentation.css
@@ -1,10 +1,14 @@
 /* general page styles */
 
+:root {
+	--general-page-style--line-height: 1.3em;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	line-height: 1.3em;
+	line-height: var(--general-page-style--line-height);
 	box-sizing: border-box;
 }
 
