--- a/src/ide/css/tgui.css
+++ b/src/ide/css/tgui.css
@@ -90,22 +90,27 @@
 	padding: 2px 10px 2px 10px;
 }
 
-.tgui-button-text:hover {
+.tgui-button-text:hover:not(:disabled) {
 	background: #eee;
 	border-color: #fff;
 }
 
-.tgui-button-text:focus {
+.tgui-button-text:focus:not(:disabled) {
 	border-color: #222;
 }
 
-.tgui-button-text:active {
+.tgui-button-text:active:not(:disabled) {
 	background: #bbb;
 	border-color: #888;
 	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px #ffffff20;
 }
 
-.tgui-button-icon {
+.tgui-button-text:disabled {
+	background: #bbb;
+	color: #333;
+}
+
+.tgui-button-icon:not(:disabled) {
 	cursor: pointer;
 
 	background: #ddd;
@@ -119,19 +124,24 @@
 	border-radius: 1.5px;
 }
 
-.tgui-button-icon:hover {
+.tgui-button-icon:hover:not(:disabled) {
 	background: #eee;
 	border-color: #fff;
 }
 
-.tgui-button-icon:focus {
+.tgui-button-icon:focus:not(:disabled) {
 	border-color: #222;
 }
 
-.tgui-button-icon:active {
+.tgui-button-icon:active:not(:disabled) {
 	background: #bbb;
 	border-color: #888;
 	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px #ffffff20;
+}
+
+.tgui-button-icon:disabled {
+	background: #bbb;
+	color: #333;
 }
 
 /* used in file dialog */
